<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.coreoz</groupId>
	<artifactId>plume-parent</artifactId>
	<version>4.2.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Plume Parent</name>
	<description>Plume is an encapsulation of the best available JVM libraries to get a project up and running quickly</description>
	<url>https://github.com/Coreoz/Plume</url>

	<organization>
		<name>Coreoz</name>
		<url>http://coreoz.com/</url>
	</organization>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Aurélien Manteaux</name>
			<email>amanteaux@coreoz.com</email>
			<organization>Coreoz</organization>
			<organizationUrl>http://coreoz.com/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<developerConnection>scm:git:git@github.com:Coreoz/Plume.git</developerConnection>
		<connection>scm:git:git@github.com:Coreoz/Plume.git</connection>
		<url>https://github.com/Coreoz/Plume</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>oss.public</id>
			<url>https://oss.sonatype.org/content/groups/public</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<javadoc.java-version>8</javadoc.java-version>
		<additionalparam>-Xdoclint:none</additionalparam>
	</properties>

	<modules>
		<module>plume-framework-dependencies</module>
		<module>plume-services</module>
		<module>plume-conf</module>
		<module>plume-mail</module>
		<module>plume-scheduler</module>
		<module>plume-db</module>
		<module>plume-db-querydsl</module>
		<module>plume-db-querydsl-codegen</module>
		<module>plume-db-test</module>
		<module>plume-web-jersey</module>
		<module>plume-web-jersey-monitoring</module>
	</modules>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<stylesheet>java</stylesheet>
							<source>${javadoc.java-version}</source>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.1.0</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
